	- Added ability to export EM Reels, both hardcoded and previously imported, as PNG files.
	- Added ability to export EM Credit Reels, both hardcoded and previously imported, as PNG files.	
	- Added ability to export LED Reels, both hardcoded and previously imported, as PNG files.
	- Added ability to import and export animations.

-- Official Releases -- 
2.1.0
- Increased Max ZOrder to 19 from 9 by jonesyUK
- Fixed bug (Issue #13) thanks funjup for the fix!
  Adding a new bulb frame would sometimes calculate it's location having negative coordinates, placing it off the workspace, especially if zoomed in or having a large frame duplicated.

  Now:

  - if a frame is selected (in focus), it will duplicate it with a small shift (20 pixels) so can easily be grabbed, and can be counted if duplicating multiples.
  - if a frame was recently selected but no longer in focus, the new frame will be placed with a certain offset (20%) from the top left corner of the user's viewing window. This way a new frame is always placed within the user's working area as they move around the canvas when zoomed in.
  - if no previous frame was selected to duplicate, the default Size is now 200x100px (was 300x100).

2.0.0
- EM credit reel: numbers 10 to 16 not saved
  Thanks to tweety231323, Hauntfreaks, Wildman and Cliffy we solved this problem so quick.

1.28.1.0
- the XML files that are generated are named incorrectly

1.28.0.0
- While editing Backglass and testing through VPX. Closing VPX quits the designer
- The B2S.Designer is now only compiled as x64 executable, to make sure it is possible to work with high resolution pictures.

B2S.Designer the B2S (Backglass 2nd Screen) Designer has moved to its own repository https://github.com/vpinball/b2s-designer

1.27.0.1
- The move from sourceforge finished
- All binary inclusions are now generated from source instead
- Redo Westworld bugfix from 2017
- comment out the hardcoded sounds loading